k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: autodevops
spec:
  replicas: 2
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: backend
          image: awsmallick1999/infrapilot-backend:latest
          ports:
            - containerPort: 5001
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits: { cpu: 500m, memory: 768Mi }
          readinessProbe:
            httpGet: { path: /health, port: 5001 }
            initialDelaySeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 5001 }
            initialDelaySeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: autodevops
spec:
  selector: { app: backend }
  ports:
    - port: 5001
      targetPort: 5001
